# job_application_agent

./: .env.example  README.md  main.py  pyproject.toml
src/news_summarizer/: main.py
src/news_summarizer/data_collection/: collector.py
src/news_summarizer/humor/: humorizer.py
src/news_summarizer/summarization/: summarizer.py
src/news_summarizer/utils/: config.py  formatter.py
tests/: test_collector.py  test_config.py  test_formatter.py  test_humorizer.py  test_main.py  test_summarizer.py
